--- a/templates/home-smartconnectarab.html
+++ b/templates/home-smartconnectarab.html
@@ -22,10 +22,11 @@
 	</script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.8.4/swiper-bundle.min.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<!-- Hotjar Tracking Code for smartconnect -->
 <script>
     (function(h,o,t,j,a,r){
         h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:4980510,hjsv:6};
+        h._hjSettings={hjid:4980545,hjsv:6};
         a=o.getElementsByTagName('head')[0];
         r=o.createElement('script');r.async=1;
         r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
@@ -524,7 +525,7 @@
 					</div>
 					<div class="bee-block bee-block-3 bee-text">
 						<div class="bee-text-content" style="line-height: 120%; font-size: 12px; font-family: inherit; color: #555555;">
-							<p style="font-size: 14px; line-height: 16px; text-align: right;"><strong ><span style="color: orange; font-size: 24px; line-height: 28px;">من 390,00 درهم
+							<p style="font-size: 14px; line-height: 16px; text-align: right;"><strong ><span style="color: orange; font-size: 24px; line-height: 28px;">من 350,00 درهم
 							</span></strong></p>
 						</div>
 					</div>
