--- a/templates/home-smartconnect.html
+++ b/templates/home-smartconnect.html
@@ -11,10 +11,11 @@
 	<meta content="" property="og:title" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.8.4/swiper-bundle.min.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<!-- Hotjar Tracking Code for smartconnect -->
 <script>
     (function(h,o,t,j,a,r){
         h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:4980510,hjsv:6};
+        h._hjSettings={hjid:4980545,hjsv:6};
         a=o.getElementsByTagName('head')[0];
         r=o.createElement('script');r.async=1;
         r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
@@ -510,7 +511,7 @@
 					</div>
 					<div class="bee-block bee-block-3 bee-text">
 						<div class="bee-text-content" style="line-height: 120%; font-size: 12px; font-family: inherit; color: #555555;">
-							<p style="font-size: 14px; line-height: 16px; text-align: left;"><strong style=""><span style="color: orange; font-size: 24px; line-height: 28px;">À partir de 390,00MAD</span></strong></p>
+							<p style="font-size: 14px; line-height: 16px; text-align: left;"><strong style=""><span style="color: orange; font-size: 24px; line-height: 28px;">À partir de 350,00MAD</span></strong></p>
 						</div>
 					</div>
 					<div class="bee-block bee-block-4 bee-text">
