--- a/templates/smartconnect.html
+++ b/templates/smartconnect.html
@@ -6,6 +6,18 @@
 <title>Contact Form</title>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Kufi&display=swap">
 
+<!-- Hotjar Tracking Code for smartconnect -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:4980545,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Noto+Kufi+Arabic:wght@100..900&display=swap');
   body {
